# serde-xml-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/de/: map.rs  mod.rs  seq.rs  var.rs
src/schema/: mod.rs
src/ser/: mod.rs  var.rs
tests/: gpx.rs  migrated.rs  xml_schema.rs
tests/fixtures/: XMLSchema-datatypes.xsd
