[package]
edition = "2018"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
description = "xml-rs based deserializer for Serde (compatible with 0.9+)"
license = "MIT"
name = "serde-xml-rs"
repository = "https://github.com/RReverser/serde-xml-rs"
version = "1.0.0"

[dependencies]
log = "0.3.6"
serde = "1.0"
xml-rs = "0.6.0"
error-chain = "0.12.0"
serde_derive = "1.0"
indexmap = "1.0.2"
quote = "0.6.11"
proc-macro2 = "0.4.26"
pretty_env_logger = "0.3.0"
heck = "0.3.1"
syn = "0.15.26"
if_chain = "0.1.3"
